[Texmap] Reloading a webgl page doesn't work https://bugs.webkit.org/show_bug.cgi?id=120593

Reviewed by Noam Rosenthal.

Source/WebCore:

Let GraphicsLayerTextureMapper know it needs to detach the platform layer when a GraphicsContext3D is destroyed.

Test: fast/canvas/webgl/webgl-reload-crash.html

* platform/graphics/GraphicsContext3DPrivate.cpp:
(WebCore::GraphicsContext3DPrivate::~GraphicsContext3DPrivate):
* platform/graphics/texmap/GraphicsLayerTextureMapper.h:
* platform/graphics/texmap/TextureMapperPlatformLayer.h:

LayoutTests:

Add a new test case to check if a crash occurs while reloading a page which contains webgl.

* fast/canvas/webgl/webgl-reload-crash-expected.txt: Added.
* fast/canvas/webgl/webgl-reload-crash.html: Added.


Canonical link: https://commits.webkit.org/139792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156282 268f45cc-cd09-0410-ab3c-d52691b4dbfc