Source/WebCore/platform/graphics/GraphicsContext3DPrivate.cpp
@@ -75,6 +75,8 @@ GraphicsContext3DPrivate::GraphicsContext3DPrivate(GraphicsContext3D* context, G
 
 GraphicsContext3DPrivate::~GraphicsContext3DPrivate()
 {
+    if (client())
+        client()->platformLayerWillBeDestroyed();
 }
 
 bool GraphicsContext3DPrivate::makeContextCurrent()
